Fin de la version mobile

--- a/exercice_1/index.html
+++ b/exercice_1/index.html
@@ -24,6 +24,7 @@
             <header>
                 <h2>Récupérer un input&nbsp:</h2>
             </header>
+            <input type="text" placeholder="Prénom">
             <button>Récupérer</button>
             <p></p>
         </article>
@@ -32,6 +33,7 @@
             <header>
                 <h2>Appliquer la TVA&nbsp:</h2>
             </header>
+            <input type="number" placeholder="Somme">
             <button>Calculer</button>
             <p></p>
         </article>
@@ -40,6 +42,7 @@
             <header>
                 <h2>Comparer des tailles&nbsp:</h2>
             </header>
+            <input type="number" placeholder="Taille">
             <button>Tester</button>
             <p></p>
         </article>
